--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -1,6 +1,9 @@
 [vertex_ai]
 api_key = "AIzaSyDeOYps67Oz7MkuII0Zug5Vj9rYQTV_neE"
 
+[genai]
+api_key = "AIzaSyB87SCWAD5J8U8bYQjCRwT-_5aLLWWBvPk"
+
 [bigquery]
 type = "service_account"
 project_id = "transdata-451904"
